# csv_parser_assignment

./: README.md  pyproject.toml
moonshot/: app.py  constants.py  db.py
moonshot/docker-mongo/: Dockerfile  docker-compose.yml  init.sh
moonshot/initial_dir/: raw.csv
tests/: test_app.py
