[tool.poetry]
name = "moonshot"
version = "0.0.1"
description = "This library is used to perform cleaning of text present in CSV."
authors = ["sandesh.gangadhar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
stopwords = "^1.0.1"
pytest = "^8.1.1"
emoji = "^2.11.0"
sqlalchemy = "^2.0.29"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csv-parser = "moonshot.app:main"
init-database = "moonshot.db:init_database"